[package]
name = "allosaur-benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
bls12_381_plus = "0.5.2"
core2 = "0.4"
digest = "0.9"
group = "0.12.1"
merlin = "3"
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
rayon = "1.5"
serde = { version = "1", features = ["serde_derive"] }
serde_cbor = "0.11"
sha2 = "0.9"
sha3 = "0.9"
uint-zigzag = { version = "0.2.0", features = ["std"] }
zeroize = "1.5"
accumulator = {path = "accumulator"}
allosaur = {path="allosaur"}

[dev-dependencies]
criterion = "0.4"
serde_bare = "0.5"

[[bench]]
name = "updates"
harness = false
